refactor: rename ShareService to GlobalShareService and update references
Renamed `ShareService` and its implementation to `GlobalShareService` and `GlobalShareServiceImpl`, respectively. Updated all corresponding imports, method calls, and references in related classes to reflect this change. Streamlined unnecessary annotations and comments during this update.